Home page enhancement assignment

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jorge Vera | WDD 130</title>
+    <meta name="description" content="Site Plan Rafting">
+    <meta author="author" content="Jorge Vera">
 </head>
 <body>
   <header>  
@@ -15,12 +17,18 @@
     </nav>
   </header>
   <main>
+    
     <h1>Jorge Vera | WDD 130</h1>
     <img src="images/meprofile.png" alt="Hello, my name is Jorge Vera" width="200">
     <p>Hello! My name is Jorge Vera, I'm from Guayaquil, Ecuador, I enjoy a lot of indoors activities
         such as videogames, movies, tabletop games etc, but I always find time to go out and enjoy fun
         activities like concerts, hanging out with friends and more.
     </p>
+    <aside>
+      <h2>Guayaquil</h2>
+      <img src="images/Guayaquil.jpg" alt="Picture of Guayaquil">
+      <p> Guayaquil is the biggest sea port in the country, comerce and bussinesses can be found in every corner of the city</p>
+    </aside>
   </main>
 
 <footer>
