--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <link rel="stylesheet" href="styles/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jorge Vera | WDD 130</title>
-    <meta name="description" content="Site Plan Rafting">
+    <title>Jorge Vera WDD 130</title>
+    <meta name="description" content="A website to share a little bit about myself and my home country, while I'm learning how to build websistes">
     <meta author="author" content="Jorge Vera">
 </head>
 <body>
@@ -24,13 +24,12 @@
         such as videogames, movies, tabletop games etc, but I always find time to go out and enjoy fun
         activities like concerts, hanging out with friends and more.
     </p>
-    <aside>
-      <h2>Guayaquil</h2>
-      <img src="images/Guayaquil.jpg" alt="Picture of Guayaquil">
-      <p> Guayaquil is the biggest sea port in the country, comerce and bussinesses can be found in every corner of the city</p>
-    </aside>
   </main>
-
+  <aside>
+    <h2>Guayaquil</h2>
+    <img src="images/Guayaquil.jpg" alt="Picture of Guayaquil">
+    <p> Guayaquil is the biggest sea port in the country, comerce and bussinesses can be found in every corner of the city</p>
+  </aside>
 <footer>
     <p>©2024 🍕 Jorge Vera 🍔 Guayaquil, Ecuador</p>
 </footer>  
