--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="styles/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jorge Vera WDD 130</title>
+    <title>Jorge Vera | 'WDD 130'</title>
     <meta name="description" content="A website to share a little bit about myself and my home country, while I'm learning how to build websistes">
     <meta author="author" content="Jorge Vera">
 </head>
