Adding more changes hoping in works

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jorge Vera | 'WDD 130'</title>
     <meta name="description" content="A website to share a little bit about myself and my home country, while I'm learning how to build websistes, I show how Guayaquil looks like, and share a bit about what the city has to offer">
-    <meta author="#" content="Jorge Vera">
+    <meta name="author" content="Jorge Vera">
 </head>
 <body>
   <header>  
