--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -32,6 +32,7 @@
         <a href="https://coolors.co/palette/000000-000000-004040-2ee0ea-000000" target="Blank">https://coolors.co/palette/000000-000000-004040-2ee0ea-000000</a>
         <h3>Typography</h3>
         <h4>Headings example font</h4>
+        <h4>Normal Text/ Pargraph example font</h4>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, illum quasi nisi sit error velit vel dolores et totam, consequuntur, itaque nam dolor eos sequi! Mollitia soluta vero eveniet nam?</p>
         <h4>Colored callout example font</h4>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio consequuntur quaerat dolor exercitationem officiis odit, sint voluptatibus, veniam temporibus in quis libero dolorem eligendi laboriosam adipisci eius assumenda. Nulla, pariatur.</p>
