--- a/week03/overlay.html
+++ b/week03/overlay.html
@@ -18,6 +18,7 @@
                 <p>Shots?: <span id="shots">Yes</span></p>
             </section>
         </div>
+        <li class="active"></li>
     </main>
     <footer>Footer Content in Fixed Position with bottom set at 0 pixels.</footer> 
 </body>
