Course Home Page Updates

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <a href="#">Home</a>
         <a href="wwr/">Rafting Site</a>
         <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+        <a href="https://www.linkedin.com/in/jorge-vera-821144181/">LinkedIn Profile</a>
+        <a href="https://www.facebook.com">Facebook</a>
     </nav>
   </header>
   <main>
@@ -27,7 +29,13 @@
     </p>
   </main>
   
-  <aside>
+  <ul class="box">
+    <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple?lang=eng" target="_blank">Aba Nigeria Temple</a></li>
+    <li><a href="https://www.churchofjesuschrist.org/temples/details/arequipa-peru-temple?lang=eng" target="_blank">Arequipa Peru Temple</a></li>
+    <li><a href="https://www.churchofjesuschrist.org/temples/details/recife-brazil-temple?lang=eng" target="_blank">Recife Brazil Temple</a></li>
+  </ul>
+
+  <aside class="box">
     <h2>Guayaquil</h2>
     <img src="images/Guayaquil.jpg" alt="Picture of Guayaquil">
     <p> Guayaquil is the biggest sea port in the country, comerce and bussinesses can be found in every corner of the city</p>
@@ -36,4 +44,5 @@
     <p>©2024 🍕 Jorge Vera 🍔 Guayaquil, Ecuador</p>
 </footer>  
 </body>
+<!--Last modified 01/24/2024 1:04AM ECT-->
 </html>
