--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     <img src="images/meprofile.png" alt="Hello, my name is Jorge Vera" width="200">
     <p>Hello! My name is Jorge Vera, I'm from Guayaquil, Ecuador, I enjoy a lot of indoors activities
         such as videogames, movies, tabletop games etc, but I always find time to go out and enjoy fun
-        activities like concerts, hanging out with friends and more.
+        activities like concerts, hanging out with friends and more. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae quo explicabo consequuntur, quam fugiat nostrum sunt asperiores corporis, fugit, id repudiandae? At harum sunt nesciunt veniam? Omnis, minus porro.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ratione voluptate repellat repellendus rem quaerat laboriosam, iusto ut. Molestiae aliquid excepturi numquam optio in minima voluptatem deserunt amet fugiat similique!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat impedit, voluptate quae quia dolorem atque repudiandae cupiditate natus quos hic, totam suscipit vel at, explicabo ea. Reiciendis veniam ipsum cumque?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero laboriosam at hic excepturi incidunt. Officia ut at cum reiciendis quod cupiditate iste doloremque consectetur magni facilis, iure eveniet aspernatur!
     </p>
 
     <ul class="box">
