--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>About Us - Dry Oar Rafting</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
         <nav>
             <img src="images/logo.png" alt="Logo">
-            <a href="site-plan-rafting.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact Us</a>
@@ -33,7 +33,7 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae ullam laborum consequuntur accusamus similique sit sunt, incidunt delectus unde! Numquam ducimus debitis repudiandae. Amet accusantium facilis excepturi vel molestias facere.
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius nesciunt, quis, similique, harum nihil eligendi laudantium velit culpa mollitia non dolorum iusto odit sequi. Consequatur et eveniet excepturi ea consectetur.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. In ipsum nobis pariatur, labore, necessitatibus cupiditate voluptates nam, ratione molestiae voluptatem quas! Ut similique velit dolorem totam fugit a expedita nesciunt.
-                
+
 
             </p>
             </article>
