--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Dry Oar Rafting</title>
+    <meta name="description" content="About us site for week3 assignment">
+    <meta name="author" content="Jorge Vera">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
