--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href="https://www.facebook.com">Facebook</a>
     </nav>
   </header>
+  <div class="grid">
   <main>
     
     <h1>Jorge Vera | WDD 130</h1>
@@ -42,6 +43,7 @@
     <img src="images/Guayaquil.jpg" alt="Picture of Guayaquil">
     <p> Guayaquil is the biggest sea port in the country, comerce and bussinesses can be found in every corner of the city</p>
   </aside>
+  </div>
 <footer>
     <p>©2024 🍕 Jorge Vera 🍔 Guayaquil, Ecuador</p>
 </footer>  
