--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <img src="images/Guayaquil.jpg" alt="Picture of Guayaquil">
     <p> Guayaquil is the biggest sea port in the country, comerce and bussinesses can be found in every corner of the city</p>
   </aside>
-  </grid>
+  </div>
 <footer>
     <p>©2024 🍕 Jorge Vera 🍔 Guayaquil, Ecuador</p>
 </footer>  
