--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <img src="images/logo.png" alt="Logo">
+            <img src="images/logo.png" alt="Logo" class="logo">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
