--- a/quiz.html
+++ b/quiz.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Quiz Assignment Week 5">
+    <meta name="author" content="Jorge Vera">
     <title>WDD 130 | Quiz Assignment</title>
     <link rel="stylesheet" href="styles/quiz.css">
 </head>
