--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -26,7 +26,7 @@
                 Cherry Hill, NJ 08003</h3>
             <h3>Phone: (520) 441 2441</h3>
             <h3>E-mail: info@dryoarrafting.com</h3>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12239.15551895921!2d-75.08240363503282!3d39.9237405620598!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sec!4v1707589824097!5m2!1sen!2sec" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12239.15551895921!2d-75.08240363503282!3d39.9237405620598!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sec!4v1707589824097!5m2!1sen!2sec" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe> 
         </section> 
 
