--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -6,7 +6,7 @@
     <title>Contact Us-Dry Oar Rafting</title>
     <meta name="description" content="Contact Us site for week5 assignment">
     <meta name="author" content="Jorge Vera">
-    <link rel="stylesheet" href="styles/contact.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
