--- a/wwr/index.html
+++ b/wwr/index.html
@@ -6,53 +6,59 @@
     <title>Rafting Site Plan</title>
     <meta name="description" content="The rafting site plan includes the site purpose, the target audience, branding information, and a style guide for the course website project.">
     <meta name="author" content="Jorge Vera">
-    <link rel="stylesheet" href="styles/site-plan-rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
-        <h1>Rafting Site Plan</h1>
-        <div>Jorge Vera</div>
+        <nav>
+            <img src="images/logo.png" alt="Logo" class="logo">
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="trips.html">Trips</a>
+            <a href="contact.html">Contact Us</a>
+        </nav>
     </header>
 
     <main>
-        <h2>Overview</h2>
-        <h3>Purpose</h3>
-        <p>Imagine that you are the owner of the rafting business and have decided that it is time for you to have an online presence. What is the purpose? You might need to do a little research if you are unfamiliar with water rafting companies.</p>
-        <h3>Audience</h3>
-        <p>Write a statement specifically identifying your target audience for a water rafting website. Review the example questions posed about target audiences from the learning activity on site plan sections. Include three (3) scenario questions. Include both the scenario questions and answers to those questions.</p>
-        <h2>Branding</h2>
-        <h3>Website Logo</h3>
-        <img src="images/logo.png" alt="Logo">
+        <section class="hero">
+            <img src="images/hero_transparency_1024.png" alt="hero" class="hero">
+            <h1>Dry Oar Rafting</h1>
+            <button>Book Now</button>
+        </section>
+        <section class="calltoaction">
+                <img src="images/Rafting-Quijos.png">
+                <h2>Check our Promos!</h2>
+                <img src="images/Rafting-Banos.png">
+                <h2>Family Bundles</h2>
+                <img src="images/whitewater-rafting-in-idaho-payette-river-1-2-scaled-0x0.jpg">
+                <h2>Other Activities</h2>       
+        </section>
 
-
-        <h2>Style Guide</h2>
-
-        <h3>Color Palette</h3>
-        <p>000000, 000000, 004040, 2EE0EA, 000000</p>
-        <a href="https://coolors.co/palette/000000-000000-004040-2ee0ea-000000" target="Blank">https://coolors.co/palette/000000-000000-004040-2ee0ea-000000</a>
-        <h3>Typography</h3>
-        <h4>Headings example font</h4>
-        <h4>Normal Text/ Pargraph example font</h4>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, illum quasi nisi sit error velit vel dolores et totam, consequuntur, itaque nam dolor eos sequi! Mollitia soluta vero eveniet nam?</p>
-        <h4>Colored callout example font</h4>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio consequuntur quaerat dolor exercitationem officiis odit, sint voluptatibus, veniam temporibus in quis libero dolorem eligendi laboriosam adipisci eius assumenda. Nulla, pariatur.</p>
-        <h3>Navigation</h3>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">About Us</a>
-            <a href="#">Trips</a>
-            <a href="#">Contact Us</a>
-        </nav>
-
-        <h2>Wireframes</h2>
-        <h3>Home Page Wireframe</h3>
-        <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Required Home Page Wireframe Design" width="700">
-        <h3>About Us Page Wireframe</h3>
-        <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design" width="700">
+        <section>
+            <h1>History</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi cumque veritatis alias illum illo vitae eos adipisci quod cupiditate. At deserunt corrupti quod nobis animi blanditiis aliquid sit quos nam!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga animi aperiam fugiat accusamus quia dolorum non adipisci consequuntur possimus eveniet assumenda natus labore, pariatur veritatis recusandae dicta perferendis suscipit odit!
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam omnis tempora est quo perspiciatis labore placeat assumenda libero aut aperiam voluptatem animi, et numquam vitae. Ullam molestias voluptatum vero incidunt!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis magni dolor nostrum sapiente obcaecati commodi, ab, magnam numquam possimus, illo dolorem autem? Doloribus distinctio repudiandae ad et itaque asperiores ab?
+            </p>
+        </section>
     </main>
 
     <footer>
-        <p>©️2024 >🌴 Rafting Site Document 🌴 Jorge Vera 🌴 WDD130</p>
+        <nav class="sociallinks">
+            <p>©️2024 Dry Oar Rafting Co. | Jorge Vera</p>
+            <a href="https://www.facebook.com">
+                <img src="images/facebook.png" alt="Facebook">
+            </a>
+
+            <a href="https://www.twitter.com">
+                <img src="images/twitter.png" alt="Twitter">
+            </a>
+
+            <a href="https://www.instagram.com">
+                <img src="images/instagram.png" alt="Instagram">
+            </a>
+        </nav>
     </footer>
 </body>
 </html>
